2014-12-24  Jan Djärv  <jan.h.d@swipnet.se>

	* nsimage.m (allocInitFromFile:): Initialize bmRep.
	(dealloc): Release bmRep.
        (setPixmapData): Make bmRep local so class member is not
        set (Bug#19133).

2014-12-24  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.h (EmacsImage): Remove imageListNext, refCount, reference,
	imageListSetNext, imageListNext.

	* nsimage.m (ImageList, imageListNext, imageListSetNext:)
	(reference): Remove.
	(allocInitFromFile:): Remove searching ImageList and calling
	reference (Bug#18918).
	(dealloc): Remove handling if ImageList.

2014-12-22  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (do_ewmh_fullscreen): Don't remove maximized_horz/vert
	when going to fullscreen (Bug#19427).

2014-12-18  Eli Zaretskii  <eliz@gnu.org>

	* window.c (Fwindow_body_width): Doc fix.  (Bug#19395)

2014-12-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* buffer.c (syms_of_buffer) <Vafter_change_functions>: fix docstring.

2014-12-13  Eli Zaretskii  <eliz@gnu.org>

	* gnutls.c (gnutls_init): Fix deprecation warning from GCC.

2014-12-12  Eli Zaretskii  <eliz@gnu.org>

	* gnutls.c (Fgnutls_available_p, syms_of_gnutls):
	Move gnutls-available-p out of the HAVE_GNUTLS conditional, and define
	them only once.

2014-12-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* emacs.c (main): Always include gnutls.h and run syms_of_gnutls.

	* gnutls.h: Always declare syms_of_gnutls.

	* gnutls.c (Fgnutls_available_p syms_of_gnutls): Move later for
	clarity.  Let the availability check return Qnil when the GnuTLS
	integration is not available, instead of erroring out.
	(Bug#19346)

2014-12-10  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (move_it_in_display_line_to, display_line):
	Don't disallow overflow-newline-into-fringe when word-wrap is in
	effect.  (Bug#19300)

2014-12-04  Lee Duhem  <lee.duhem@gmail.com>  (tiny change)

	* eval.c (Fsignal): Remove duplicate test.
	(Fautoload_do_load): Fix up docstring.

2014-12-02  Jan Djärv  <jan.h.d@swipnet.se>
